added few images for static site

--- a/index.html
+++ b/index.html
@@ -29,16 +29,15 @@
 <div class="col-md-6 navi r-dry1">
 	<div class="blogdamage"><span class="phone1"><i class="fa fa-phone phone2"></i>
 
-<a href="tel:+91 9866300446">+91 9866300446  </a> /
-<a href="tel:+ 9032302121">+91  9032302121</a>
+<a href="tel:+91 9866300446">+91 88615 51067‬  </a>
 
 
 </span>
 <span class="email1">
-
+<h4>
 <a href="mailto:webmaster@example.com">
-<i class="fa fa-envelope-o envelope2"></i>bala@lifespaceinteriors.in</a></span>
-
+<i class="fa fa-envelope-o envelope2"></i>praveen@gmail.com</a></span>
+</h4>
 
 </div>
 </div>
@@ -830,7 +829,7 @@ Mumbai Highway, Moosapet, Hyderbad -500 018. <br></p>
 
   <p class="footme">
 <i class="fa fa-envelope-o direction mails"></i> 
-<a href="mailto:webmaster@example.com"> bala@lifespaceinteriors.in  </a>
+<a href="mailto:webmaster@example.com"> praveen@lifespaceinteriors.in  </a>
 <a href="mailto:webmaster@example.com">sales@lifespaceinteriors.in   </a>
 <a href="mailto:webmaster@example.com">admin@lifespaceinteriors.in </a>
 
