added few images for static site

--- a/index.html
+++ b/index.html
@@ -813,12 +813,11 @@ provide you our services.&nbsp;<o:p></o:p></p>
       </div>
    <div class="col-md-3 contact-01 direction4 navi">
         <h3>Contact Info</h3>
-        <p><i class="fa fa-map-marker direction direction1"></i><br>H.No. 12-6-23/1/4, Opposite Kukatpally Bus Depot.
-Mumbai Highway, Moosapet, Hyderbad -500 018. <br></p>
+        <p><i class="fa fa-map-marker direction direction1"></i><br> Water Tank road Bangalore -500 078. <br></p>
 <p><i class="fa fa-phone direction direction2 "></i>   <br>  
 
-<a href="tel:+91 9866300446"> +91 9866300446  </a>
-<a href="tel:+91 9032302121"> +91 9032302121  </a>
+<a href="tel:+91 88615 51067‬"> +91 88615 51067‬  </a>
+<a href="tel:+91 88615 51067‬"> +91 88615 51067‬  </a>
 
 
 
@@ -829,9 +828,9 @@ Mumbai Highway, Moosapet, Hyderbad -500 018. <br></p>
 
   <p class="footme">
 <i class="fa fa-envelope-o direction mails"></i> 
-<a href="mailto:webmaster@example.com"> praveen@lifespaceinteriors.in  </a>
-<a href="mailto:webmaster@example.com">sales@lifespaceinteriors.in   </a>
-<a href="mailto:webmaster@example.com">admin@lifespaceinteriors.in </a>
+<a href="mailto:webmaster@example.com">praveen@gmail.in  </a>
+<a href="mailto:webmaster@example.com">praveen@gmail.in   </a>
+<a href="mailto:webmaster@example.com">praveen@gmail.in </a>
 
 </p>
         <div class="call-us" style="
