--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
         <title>Interior design services </title>
 
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://images.livmatrix.com/img/apple-touch-icon-144-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://images.livmatrix.com/img/apple-touch-icon-114-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://images.livmatrix.com/img/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="https://images.livmatrix.com/img/apple-touch-icon-57-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./Livspace_files/images/apple-touch-icon-144-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./Livspace_files/images/apple-touch-icon-114-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./Livspace_files/images/apple-touch-icon-72-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="./Livspace_files/images/apple-touch-icon-57-precomposed.png">
         <link rel="shortcut icon" href="https://images.livmatrix.com/img/favicon.png">
 
         <link rel="canonical" href="https://www.livspace.com/in/page/www.livspace.com/in/hire-a-designer">
@@ -62,8 +62,8 @@
                     <!-- Header with logo -->
 <header class="w-full flex bg-white items-center shadow sticky pin-t pin-l pin-r z-50" id="fixed-header">
     <figure class="lg:w-4/5 md:w-3/4 us:w-3/5 pl-2 xs:pl-3 sm:pl-4 lg:pl-10">
-        <a href="https://www.livspace.com/" id="home-page-logo">
-            <img src="./Livspace_files/Livspace-logo-black.png" class="max-w-4uxs us:max-w-uxs xs:max-w-1uxs sm:max-w-2uxs md:max-w-3uxs" alt="Livspace logo">
+        <a href="https://www.bangalore72.github.io/" id="home-page-logo">
+            <img src="./Livspace_files/images/space360.png" class="max-w-4uxs us:max-w-uxs xs:max-w-1uxs sm:max-w-2uxs md:max-w-3uxs" alt="Space360 logo">
         </a>
     </figure>
         <section class="lg:w-1/5 md:w-1/4 us:w-2/5 bg-brand-secondary xs:py-6 py-5 ">
@@ -2167,7 +2167,7 @@
         <aside class="flex">
                     <section class="px-10 w-1/3">
                 <figure class="relative w-full">
-                    <img data-src="//images.livmatrix.com/img/landingpages/full-home-interiors/20181016/pay-10.png" alt="Pay 10%" class="lazy">
+                    <img data-src="./Livspace_files/images/pay-10.png" alt="Pay 10%" class="lazy">
                     <figcaption class="perfect-center absolute font-sans">
                         <p class="uppercase font-base font-normal tracking-normal text-black opacity-50 mb-5 antialiased">
                             pay
@@ -2185,7 +2185,7 @@
             </section>
                     <section class="px-10 w-1/3">
                 <figure class="relative w-full">
-                    <img data-src="//images.livmatrix.com/img/landingpages/full-home-interiors/20181016/pay-50.png" alt="Pay 50%" class="lazy">
+                    <img data-src="./Livspace_files/images/pay-50.png" alt="Pay 50%" class="lazy">
                     <figcaption class="perfect-center absolute font-sans">
                         <p class="uppercase font-base font-normal tracking-normal text-black opacity-50 mb-5 antialiased">
                             pay
@@ -2203,7 +2203,7 @@
             </section>
                     <section class="px-10 w-1/3">
                 <figure class="relative w-full">
-                    <img data-src="/Livspace_files/images/pay-100.png" alt="Pay 100%" class="lazy">
+                    <img data-src="./Livspace_files/images/pay-100.png" alt="Pay 100%" class="lazy">
                     <figcaption class="perfect-center absolute font-sans">
                         <p class="uppercase font-base font-normal tracking-normal text-black opacity-50 mb-5 antialiased">
                             pay
