--- a/lifespace.html
+++ b/lifespace.html
@@ -36,11 +36,13 @@
 <span class="email1">
 <h4>
 <a href="mailto:webmaster@example.com">
-<i class="fa fa-envelope-o envelope2"></i>praveen@gmail.com</a></span>
+<i class="fa fa-envelope-o envelope2"></i>Contact Praveen at praveen@gmail.com</a></span>
 </h4>
 
 </div>
 </div>
+	
+	
 
 <div class="col-md-6 navi r-dry1">
 
